# NoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Game.cpp  Scene.cpp  clock.cpp  consts.hpp  create_entity.cpp  debug.cpp  debug.hpp  debug_timer.cpp  debug_timer.hpp  entities.cpp  game.cpp  game.hpp  globals.hpp  input.cpp  load_default_prefab.hpp  main.cpp
src/assets/atlases/UntitledRPGAtlas/: UntitledRPGAtlas.json
src/assets/maps/Test/: test.json  test.tmx
src/assets/maps/baseMap/: baseMap.json  islandMap.json
src/assets/maps/islandMap/: islandMap.json
src/assets/maps/stoyMap/: storyMap.json
src/camera/: Camera.cpp
src/camera/controllers/: PlayerCameraController.cpp
src/camera/controllers/pathCameraController/: PathCameraController.cpp
src/components/: CMakeLists.txt  Sprite.cpp  name.hpp  renderable.hpp  texture.hpp  tile.hpp  to_render_tile.hpp
src/components/animation/: animation.hpp  animator.hpp  idle_animation.hpp  move_animation.hpp
src/components/collision/: collision.hpp
src/context/: CMakeLists.txt  animation_structs.hpp  camera.cpp  camera.hpp  children.hpp  clock.hpp  component_grid.hpp  component_grid_ignore.hpp  destroy.hpp  input.hpp  load_prefab.hpp  resource_loader.cpp  resource_loader.hpp  sprite_sheet_atlas.cpp  sprite_sheet_atlas.hpp  texture_atlas.cpp
src/context/component_grid/: CMakeLists.txt
src/context/map_loader/: CMakeLists.txt  map_loader.cpp  map_loader.hpp
src/context/map_loader/components/: load_map.hpp  persistent.hpp
src/context/resource_loader/: CMakeLists.txt  resource_loader.cpp  resource_loader.hpp
src/core/: CMakeLists.txt
src/core/camera/: camera.cpp
src/core/input/: CMakeLists.txt
src/core/renderer/: CMakeLists.txt  renderer.cpp
src/core/shaders/: CMakeLists.txt  shader_loader.cpp  shader_manager.cpp  shader_manager.hpp  shader_program.cpp  shader_program.hpp  uniform.hpp
src/core/sprite_sheet_atlas/: sprite_sheet_atlas.cpp  sprite_sheet_atlas.hpp
src/debug/: CMakeLists.txt  debug.cpp  debug.hpp  debug_timer.cpp
src/debug/components/: render_collision.hpp
src/gameObjects/: GameObject.cpp
src/gameObjects/objects/: Player.cpp
src/prefabs/: CMakeLists.txt  custom_cursor.hpp  default_prefab.hpp  fps_counter_entity.hpp  kid.cpp  kid.hpp  test_npc.cpp  test_npc.hpp  test_npc_2.hpp  tree.hpp
src/scene/: Map.cpp  Scene.cpp
src/scene/gameObjects/: GameObject.cpp  LogicObject.cpp  SpriteObject.cpp
src/scene/gameObjects/objects/: BackgroundObject.cpp  PlayerObject.cpp
src/scene/gameObjects/spriteObjects/: BackgroundObject.cpp  PlayerObject.cpp
src/scene/maps/: TestMap.cpp
src/shaderPrograms/BasicShader/: BasicShader.cpp  fragmentShader.glsl  vertexShader.glsl
src/systems/: AnimationSystem.cpp  CMakeLists.txt  CameraSystem.cpp  CollisionSystem.cpp  GUISystem.cpp  InputHandler.cpp  InputSystem.cpp  MapLoaderSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  StateSystem.cpp  animation_system.cpp  camera_system.cpp  collision_system.cpp  collision_system.hpp  gui_system.cpp  gui_system.hpp  input_system.cpp  movement_system.hpp  system.hpp  text_system.cpp  text_system.hpp
src/systems/animation/: CMakeLists.txt  animation_system.cpp
src/systems/animation/components/: idle_animation.hpp
src/systems/animation/context/: CMakeLists.txt  sprite_sheet_atlas.cpp  sprite_sheet_atlas.hpp
src/systems/camera/: CMakeLists.txt  camera.cpp  camera_system.cpp  camera_system.hpp
src/systems/camera/components/: camera_controller.hpp
src/systems/camera/context/: CMakeLists.txt  camera.cpp  camera.hpp
src/systems/collision/: CMakeLists.txt  collision_system.cpp  collision_system.hpp
src/systems/collision/components/: collision.hpp  interactable.hpp
src/systems/gui/: CMakeLists.txt  dialog_builder.cpp  dialog_builder.hpp  dialog_step.hpp  gui_system.cpp  gui_system.hpp
src/systems/gui/components/: dialog.hpp  dialog_child.hpp  fps_counter.hpp
src/systems/gui/context/: CMakeLists.txt  text_manager.cpp  text_manager.hpp
src/systems/input/: CMakeLists.txt  input_system.cpp  input_system.hpp
src/systems/input/components/: cursor.hpp  hovered.hpp  interactable.hpp  interacter.hpp  interaction.hpp  left_clicked.hpp  player_control.hpp  right_clicked.hpp
src/systems/input/context/: input.cpp  input.hpp
src/systems/map_loader/: CMakeLists.txt  component_factory.hpp  map_loader_system.cpp  map_loader_system.hpp  prefab_factory.hpp  resource_loader.hpp  texture_atlas.cpp
src/systems/map_loader/components/: map_loader.hpp
src/systems/movement/: CMakeLists.txt  movement_system.cpp  movement_system.hpp
src/systems/movement/components/: velocity.hpp
src/systems/render/: CMakeLists.txt  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  shader_loader.cpp  shader_loader.hpp
src/systems/render/components/: gui.hpp  gui_element.hpp  model.hpp  outline.hpp  spacial.hpp  texture.hpp  tile_set.hpp  to_render.hpp
src/systems/render/context/: CMakeLists.txt  shader_manager.cpp  shader_manager.hpp  texture_atlas.cpp  texture_atlas.hpp
src/systems/render/shaders/: CMakeLists.txt  shader_manager.cpp  shader_manager.hpp  shader_program.cpp  (+1 more)
src/systems/renderSystem/: Camera.cpp  RenderSystem.cpp
src/systems/state_machine/: CMakeLists.txt  state_machine_builder.cpp  state_machine_builder.hpp  state_machine_system.cpp  state_machine_system.hpp  states.hpp
src/systems/text/: CMakeLists.txt  text_system.cpp  text_system.hpp
src/util/: CMakeLists.txt  Clock.cpp  Grid.cpp  Input.cpp  InputManager.cpp  ShaderLoader.cpp  TextureAtlas.cpp  TextureManager.cpp
src/util/QuadTree/: QuadTree.cpp
src/util/camera/: Camera.cpp
src/util/scene/: GameObject.cpp  Instance.cpp  Map.cpp  ObjectInstance.cpp  Scene.cpp  Sprite.cpp
(+222 files in other folders)
